# bytestreams

./: Cargo.toml  README.md
examples/: io-cat.rs  rte-new.rs  rte-old.rs  text-cat.rs  utf8-cat.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: text_reader.rs  utf8_reader.rs
src/: lib.rs  no_forbidden_characters.rs  read.rs  slice_reader.rs  status.rs  std_reader.rs  std_writer.rs  text_reader.rs  text_writer.rs  unicode.rs  utf8_reader.rs  utf8_writer.rs  write.rs
